# CNN-Kidney-Disease-Classification

./: .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  metrics.json  params.yaml  pyproject.toml  requirements.txt  scores.json  setup.py  template.py
.github/workflows/: ci.yaml
config/: config.yaml
src/cnnClassifier/: __init__.py
src/cnnClassifier/components/: data_ingestion.py  model_evaluation_mlflow.py  model_trainer.py  prepare_base_model.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/constants/: __init__.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: prediction_pipeline.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_evaluation.py
src/cnnClassifier/utils/: common.py
templates/: index.html
