[build-system]
requires = ["setuptools>=42", "wheel"]  # Specify build requirements
build-backend = "setuptools.build_meta"

[project]
name = "cnnClassifier"  # Required
version = "0.0.0"  # Required
description = "CNN based Kidney Disease Classification Project"
readme = "README.md"
requires-python = ">=3.10, <4"
license = {text = "MIT License"}
authors = [
    {name = "Nida-16", email = "nidashaikh1602@gmail.com"}
]
keywords = ["cnn", "classifier", "classification"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "attrs>=21.4.0",
    "colorama>=0.4.6",
    "cryptography>=42.0.2",
    "filelock>=3.16.1",
    "keyring>=25.5.0",
    "Pillow>=11.0.0",
    "pyOpenSSL>=24.2.1",
    "redis>=5.0.3",
    "tomli_w>=1.1.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
]
docs = [
    "Sphinx>=8.1.3",
    "docutils>=0.21.2",
]
dev = [
    "ipython>=8.4.0",
    "ipywidgets>=7.7.0",
]


[project.urls]
home-page = "https://github.com/Nida-16/CNN-Kidney-Disease-Classification"
bug-tracker = "https://github.com/Nida-16/CNN-Kidney-Disease-Classification/issues"

[tool.setuptools.packages.find]
where = ["src"]
